stable-diffusion/fileservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-filebrowser-service
spec:
  selector:
    app: stable-diffusion-webui
  ports:
  - port: 8000
    targetPort: 80
  type: ClusterIP
