stable-diffusion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: sd.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-diffution-service
                port:
                  number: 7860
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
    - host: sd.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-diffusion-service
                port:
                  number: 7860
  tls:
    - hosts:
        - sd.celestium.life
      secretName: sd-cert
